[gd_scene load_steps=4 format=2]

[ext_resource path="res://object/tick_button/tick_button.gd" type="Script" id=1]
[ext_resource path="res://asset/sprite2D/UI/question.png" type="Texture" id=2]
[ext_resource path="res://asset/sounds/effect/hover_btn.mp3" type="AudioStream" id=3]

[node name="Tick" type="TextureButton"]
margin_right = 47.0
margin_bottom = 47.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 2 )
script = ExtResource( 1 )
hover_sound = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]

[connection signal="button_down" from="." to="." method="_on_Tick_button_down"]
[connection signal="button_up" from="." to="." method="_on_Tick_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Tick_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tick_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_Tick_toggled"]
